# nano-banana

./: .gitignore  README.md  pyproject.toml
homeworks/HW01/: HW01.ipynb  HW01.ipynd
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW06/docs/: S06-brief.md
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW07/docs/: S07-brief.md
homeworks/HW08-09/: HW08-09.ipynb  README.md  report.md
homeworks/HW08-09/artifacts/: best_config.json  runs.csv  summary.json
homeworks/HW10-11/: HW10-11.ipynb  README.md  report.md
homeworks/HW10-11/TS/: S10-demo-01-cnn-from-scratch.ipynb
homeworks/HW12/: HW12.ipynb  README.md  report.md
homeworks/HW13/: HW13.ipynb  README.md  report.md
project/: README.md  report.md  requirements.txt  self-checklist.md
project/artifacts/: README.md  metrics.json  sample_predictions.csv  ticket_classifier.joblib
project/configs/: .env.example  README.md  config.yaml
project/data/: README.md  support_tickets.csv
project/notebooks/: 01_eda_and_experiments.ipynb  README.md
project/src/: README.md  __init__.py  config.py  data.py  model.py  predict.py  service.py  train.py
project/tests/: README.md  test_data.py  test_model.py
tools/: download_kmnist.py  install_ml_deps.ps1
tools/pyfix/: sitecustomize.py
(+28 files in other folders)
